upadted print screen on grocery list

--- a/public/grocery-list.html
+++ b/public/grocery-list.html
@@ -4,7 +4,7 @@
     <title>Groceries</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="stylesheets/groceries.css" />
-    <link rel="stylesheet" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" href="stylesheets/groceries-print.css" media="print" />
     <script src="javascripts/groceries.js"></script>
   </head>
   <body>
