modal and overlay pop up

--- a/public/company-team.html
+++ b/public/company-team.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="initial-scale=1.0" />
     <link rel="stylesheet" href="stylesheets/company-site.css" />
+    <link rel="stylesheet" href="stylesheets/company-team.css" />
     <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="javascripts/company-people.js"></script>
@@ -26,11 +27,9 @@
 
     <main>
       <div id="team" class="column">
-        <article>
+        <article id="people">
           <h2>Team</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniadolor</p>
-          <ul id="people">
-          </ul>
         </article>
       </div>
     </main>
