--- a/public/company-team.html
+++ b/public/company-team.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="stylesheets/company-team.css" />
     <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js" integrity="sha256-xLD7nhI62fcsEZK2/v8LsBcb4lG7dgULkuXoXB/j91c=" crossorigin="anonymous"></script>
     <script src="javascripts/company-people.js"></script>
     <script src="javascripts/company-team.js"></script>
   </head>
