restructured directory to improve logic and organization, parsed groups of logic into individual subdirectories

--- a/public/company/home.html
+++ b/public/company/home.html
@@ -4,18 +4,19 @@
     <title>Space Design | Home</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="initial-scale=1.0" />
-    <link rel="stylesheet" href="stylesheets/company-site.css" />
+    <link rel="stylesheet" href="../stylesheets/whitespace-reset.css" />
+    <link rel="stylesheet" href="stylesheets/main.css" />
   </head>
   <body>
     <header>
       <h1>
-        <a href="company-home.html">SpaceDesign</a>
+        <a href="home.html">SpaceDesign</a>
       </h1>
       <nav>
         <ul>
-          <li><a href="company-home.html" class="active">Home</a></li>
-          <li><a href="company-projects.html">Projects</a></li>
-          <li><a href="company-team.html">Team</a></li>
+          <li><a href="home.html" class="active">Home</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="team.html">Team</a></li>
         </ul>
       </nav>
     </header>
