--- a/public/company/team.html
+++ b/public/company/team.html
@@ -4,24 +4,25 @@
     <title>Space Design | Team</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="initial-scale=1.0" />
-    <link rel="stylesheet" href="stylesheets/company-site.css" />
-    <link rel="stylesheet" href="stylesheets/company-team.css" />
+    <link rel="stylesheet" href="../stylesheets/whitespace-reset.css" />
+    <link rel="stylesheet" href="stylesheets/main.css" />
+    <link rel="stylesheet" href="stylesheets/team.css" />
     <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js" integrity="sha256-xLD7nhI62fcsEZK2/v8LsBcb4lG7dgULkuXoXB/j91c=" crossorigin="anonymous"></script>
-    <script src="javascripts/company-people.js"></script>
-    <script src="javascripts/company-team.js"></script>
+    <script src="javascripts/people.js"></script>
+    <script src="javascripts/team.js"></script>
   </head>
   <body>
     <header>
       <h1>
-        <a href="company-home.html">SpaceDesign</a>
+        <a href="home.html">SpaceDesign</a>
       </h1>
       <nav>
         <ul>
-          <li><a href="company-home.html">Home</a></li>
-          <li><a href="company-projects.html">Projects</a></li>
-          <li><a href="company-team.html" class="active">Team</a></li>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="team.html" class="active">Team</a></li>
         </ul>
       </nav>
     </header>
