--- a/public/grocery-list/groceries.html
+++ b/public/grocery-list/groceries.html
@@ -3,6 +3,7 @@
   <head>
     <title>Groceries</title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../stylesheets/whitespace-reset.css" />
     <link rel="stylesheet" href="stylesheets/groceries.css" />
     <link rel="stylesheet" href="stylesheets/groceries-print.css" media="print" />
     <script src="javascripts/groceries.js"></script>
