--- a/public/calculator/simple-calculator.html
+++ b/public/calculator/simple-calculator.html
@@ -3,7 +3,8 @@
   <head>
     <title>Calculator</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="../stylesheets/whitespace-reset.css" />
+    <link rel="stylesheet" href="stylesheets/calculator.css" />
     <script src="javascripts/calculator.js"></script>
   </head>
 
