--- a/public/company/projects.html
+++ b/public/company/projects.html
@@ -4,18 +4,19 @@
     <title>Space Design | Projects</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="initial-scale=1.0" />
-    <link rel="stylesheet" href="stylesheets/company-site.css" />
+    <link rel="stylesheet" href="../stylesheets/whitespace-reset.css" />
+    <link rel="stylesheet" href="stylesheets/main.css" />
   </head>
   <body>
     <header>
       <h1>
-        <a href="company-home.html">SpaceDesign</a>
+        <a href="home.html">SpaceDesign</a>
       </h1>
       <nav>
         <ul>
-          <li><a href="company-home.html">Home</a></li>
-          <li><a href="company-projects.html" class="active">Projects</a></li>
-          <li><a href="company-team.html">Team</a></li>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="projects.html" class="active">Projects</a></li>
+          <li><a href="team.html">Team</a></li>
         </ul>
       </nav>
     </header>
@@ -25,7 +26,7 @@
         <h2>Projects</h2>
         <article>
           <figure>
-            <img src="images/company_img_project_app.jpg" alt="Get this app" />
+            <img src="images/img_project_app.jpg" alt="Get this app" />
           </figure>
           <h3>Project name</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -33,7 +34,7 @@
 
         <article>
           <figure>
-            <img src="images/company_img_project_moment.jpg" alt="Moment Magazine" />
+            <img src="images/img_project_moment.jpg" alt="Moment Magazine" />
           </figure>
           <h3>Project name</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -41,7 +42,7 @@
 
         <article>
           <figure>
-            <img src="images/company_img_project_map.jpg" alt="Have a good trip" />
+            <img src="images/img_project_map.jpg" alt="Have a good trip" />
           </figure>
           <h3>Project name</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
