completed slideshow active image selector

--- a/public/photo-gallery/gallery.html
+++ b/public/photo-gallery/gallery.html
@@ -13,9 +13,7 @@
   <body>
     <main>
       <h1>My Photo Gallery</h1>
-      <figure>
-        <img src="https://via.placeholder.com/1200x900" alt="" />
-        <figcaption>Example photo</figcaption>
+      <figure id="active-image">
       </figure>
       <div id="carousel">
       </div>
