--- a/public/photo-gallery/gallery.html
+++ b/public/photo-gallery/gallery.html
@@ -5,18 +5,38 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../stylesheets/whitespace-reset.css" />
     <link rel="stylesheet" href="stylesheets/gallery.css" />
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <script src="javascripts/images.js"></script>
+    <!-- <script src="javascripts/images.js"></script> -->
     <script src="javascripts/gallery.js"></script>
   </head>
   <body>
     <main>
       <h1>My Photo Gallery</h1>
-      <figure id="active-image">
-      </figure>
-      <div id="carousel">
+      <div id="slide-deck">
+        <figure>
+          <img src="https://via.placeholder.com/1200x900" alt="" />
+          <figcaption>Example photo</figcaption>
+        </figure>
+        <figure>
+          <img src="https://via.placeholder.com/1200x900/000000" alt="" />
+          <figcaption>Example photo</figcaption>
+        </figure>
+        <figure>
+          <img src="http://via.placeholder.com/1200x900/66cc33/f0f0f0" alt="" />
+          <figcaption>Example photo</figcaption>
+        </figure>
+        <figure>
+          <img src="http://via.placeholder.com/1200x900/993535/aaa" alt="" />
+          <figcaption>Example photo</figcaption>
+        </figure>
       </div>
+      <ul id="nav">
+        <li><img src="https://via.placeholder.com/1200x900" alt="" title="Photo 1" /></li>
+        <li><img src="https://via.placeholder.com/1200x900/000000" alt="" title="Photo 2" /></li>
+        <li><img src="http://via.placeholder.com/1200x900/66cc33/f0f0f0" alt="" title="Photo 3" /></li>
+        <li><img src="http://via.placeholder.com/1200x900/993535/aaa" alt="" title="Photo 4" /></li>
+      </ul>
     </main>
   </body>
 </html>
