completed jQuery to vanilla JS conversion

--- a/public/inventory-form/form.html
+++ b/public/inventory-form/form.html
@@ -3,9 +3,9 @@
   <head>
     <title>Inventory Order Form</title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="stylesheets/form.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="javascripts/inventory.js"></script>
-    <link rel="stylesheet" href="stylesheets/form.css" />
   </head>
   <body>
     <main>
@@ -84,10 +84,11 @@
           </table>
 
           <button type="button" id="add_item">Add item</button>
-<!-- 
+          <!-- 
           <div class="actions">
             <input type="submit" value="Order inventory" />
-          </div> -->
+          </div> 
+          -->
         </fieldset>
       </form>
     </main>
